--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>InfoVis</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <h1>Info Visualisation by Ashish Priyadarshi</h1>
+    <ul>
+      <li>Generative</li>
+      <li>Manifesto</li>
+      <li>Critique</li>
+      <li>Project</li>
+      <li>Making of the Project</li>
+    </ul>
+
+    <a href="https://www.behance.net/ashishpriyadarshi">My Behance</a>
+
+    <a href="https://github.com/ashish-livefree">My Github</a>
+
+    <img src="http://lorempixel.com/400/200/" alt="Abstract Image " />
+  </body>
+</html>
