--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <h1>Info Visualisation by Ashish Priyadarshi</h1>
     <ul>
-      <li>Generative</li>
+      <li>
+        <a href="/sketch.html">Generative</a>
+      </li>
       <li>Manifesto</li>
       <li>Critique</li>
       <li>Project</li>
@@ -20,10 +22,8 @@
 
     <a href="https://www.behance.net/ashishpriyadarshi">My Behance</a>
     <br />
-
     <a href="https://github.com/ashish-livefree">My Github</a>
     <br />
-
     <img src="http://lorempixel.com/400/200/" alt="Abstract Image " />
   </body>
 </html>
