--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Info Visualisation by Ashish Priyadarshi</h1>
     <ul>
       <li>
-        <a href="/sketch.html">Generative</a>
+        <a href="sketch.html">Generative</a>
       </li>
       <li>Manifesto</li>
       <li>Critique</li>
