--- a/sketch.html
+++ b/sketch.html
@@ -1,22 +1,37 @@
-<script src= "https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+<html>
+  <head>
+    <style>
+      body {
+        background-color: black;
+      }
 
-<script>
-function setup() {
-  createCanvas(600, 600);
-  background(255,150,150);
-}
+      h1 {
+        font-family: cursive;
+        color: orange;
+      }
+    </style>
 
-function draw() {
- if(mouseIsPressed){
-   translate(mouseX,mouseY)
-   rotate(PI/4);
-   let r = random(0,255);
-   stroke(r);
-   let a = random(25,200);
-   line(0+a,0,0-a,0);
-   //line(mouseX-50,mouseY,mouseX+50,mouseY);
- }
+    <h1>Generative Design</h1>
 
-}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
 
-</script>
+    <script>
+      function setup() {
+        createCanvas(600, 600);
+        background(255, 150, 150);
+      }
+
+      function draw() {
+        if (mouseIsPressed) {
+          translate(mouseX, mouseY);
+          rotate(PI / 4);
+          let r = random(0, 255);
+          stroke(r);
+          let a = random(25, 200);
+          line(0 + a, 0, 0 - a, 0);
+          //line(mouseX-50,mouseY,mouseX+50,mouseY);
+        }
+      }
+    </script>
+  </head>
+</html>
