--- a/sketch.html
+++ b/sketch.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <style>
@@ -10,7 +11,9 @@
         color: orange;
       }
     </style>
+  </head>
 
+  <body>
     <h1>Generative Design</h1>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
@@ -33,5 +36,5 @@
         }
       }
     </script>
-  </head>
+  </body>
 </html>
