--- a/basic.html
+++ b/basic.html
@@ -23,7 +23,7 @@
 </header>
 
 <main>
-    <h2>Basic HTML Chart usinf Divs</p>
+    <h2>Basic HTML Chart using Divs</p>
     <div style="width: 50px;">5</div>
     <div style="width: 70px;">7</div>
     <div style="width: 180px;">18</div>
