--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <li>Critique</li>
       <li>Project</li>
       <li>Making of the Project</li>
+      <li>
+        <a href ="basic.html">Basic HTML Charts Using Div</a>
+      </li>
     </ul>
 
     <a href="https://www.behance.net/ashishpriyadarshi">My Behance</a>
