--- a/basic.html
+++ b/basic.html
@@ -23,13 +23,20 @@
 </header>
 
 <main>
-    <h2>Basic HTML Chart using Divs</p>
+    <h2>Basic HTML Chart</p>
     <div style="width: 50px;">5</div>
     <div style="width: 70px;">7</div>
     <div style="width: 180px;">18</div>
     <div style="width: 200px;">20</div>
     <div style="width: 250px;">25</div>
-
+<h2>Basic SVG Chart</h2>
+<svg width="250" height="200" fill="brown">
+    <rect x="0" y="0" width="50" height="25"></rect>
+    <rect x="0" y="30" width="70" height="25"></rect>
+    <rect x="0" y="60" width="180" height="25"></rect>
+    <rect x="0" y="90" width="200" height="25"></rect>
+    <rect x="0" y="120" width="250" height="25"></rect>
+</svg>
 </main>
 
 <footer>
