--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li>Project</li>
       <li>Making of the Project</li>
       <li>
-        <a href ="basic.html">Basic HTML Charts Using Div</a>
+        <a href ="basic.html">Basic Charts</a>
       </li>
     </ul>
 
